# screencrash

./: .gitignore  .gitmodules  Makefile  README.md
.github/: CODEOWNERS
.github/workflows/: inventory_lint.yaml  media_lint.yaml
ansible/: README.md  rsync-exclude-inventory  setup-raspberry.yml
ansible/files/: media.service  (+1 more)
components/: README.md
components/audio/: Makefile  Pipfile  README.md  pyproject.toml
components/audio/src/: audio_vlc.py  commandhandler.py  coreconnection.py  file_handler.py  main.py
components/hosted_media/: pyproject.toml
components/hosted_media/src/: av_utils.py  core_connection.py  entity_manager.py  main.py  media_streamer.py  settings.py  util.py  video_streamer.py  web_app.py
components/hosted_media/src/static/: audio.js  domUtils.js  imageHandler.js  images.js  index.html  script.js  style.css  util.js  video.js  videos.js  wrappers.js
components/ledController/: Pipfile  pyproject.toml
components/ledController/on_raspberry/: screencrash_listener.py  screencrash_listener.service
components/ledController/src/: coreconnection.py  main.py
core/: .gitignore  Makefile  README.md  pyproject.toml
core/schemas/: LICENSE  README.md
core/src/: main.py  opus.py
krockis/: README.md  rsync-exclude-media  setup-raspberry.yml
resources/: .gitignore  Makefile  README.md  readme.txt  real_opus.yaml
schemas/: action.schema.json
screencrash-components/: Makefile  README.md
screencrash-ui/: .gitignore  README.md  externals.d.ts
scripts/: convert_latex_script_to_html.py  convert_videos.py  opus_from_csv.py  read_csv.py
ui/: .eslintrc  .prettierrc  Makefile  README.md  browser-sync.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  webpack.config.js
(+96 files in other folders)
