[project]
name = "core"
dependencies = [
    "websockets==12.0",
    "aiofiles==24.1.0",
    "pyyaml==6.0.1",
    "pymupdf==1.24.7",
    "jsonpath-ng==1.6.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.pdm.dev-dependencies]
dev = [
    "watchdog==2.1.6",
    "pyaudacity",
]
